2003-01-31  David Sheldon      <dave-mono@earth.li>

  * FromBase64Transform.cs: Fixes to what happens if a character in the
   input stream is not in the lookup table. IndexOutOfRangeException was 
   wrong.

2003-12-15  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConfig.cs: Now use internal Environment.GetMachineConfigPath()
	to find machine.config.	Initialization removed from static constructor
	to speed up 98% of software that do not requires it.
	* SymmetricAlgorithm.cs: Fixed padding for None and Zeros modes. Unit
	tests for padding modes are now in PaddingModeTest.cs.

2003-12-10  Zoltan Varga  <vargaz@freemail.hu>

	* HMAC.cs: Fix compilation warnings.

2003-12-10  Mark Crichton  <crichton@gimp.org>

	* RNGCryptoServiceProvider.cs: Removed icall to GetNonZeroBytes. Now
	done with managed code.

2003-11-13  Sebastien Pouliot  <spouliot@videotron.ca>

	* ProtectedData.cs: Added exceptions - core is still TODO.
	* ProtectedMemory.cs: Added exceptions - core is still TODO.

2003-11-11  Sebastien Pouliot  <spouliot@videotron.ca>

	* Rfc2898DeriveBytes.cs: Now handle resets and keys longer than 160 
	bits (HMACSHA1 block size). Removed TODO.
	* SymmetricAlgorithm.cs: Fixed decryption when inputOffset > 0.
	[#50826].

2003-11-10  Sebastien Pouliot  <spouliot@videotron.ca>

	* Rfc2898DeriveBytes.cs: Implementation for PKCS5 PBKDF2. It works
	except for the Reset() part - which implies some kind of Resume.

2003-11-09  Sebastien Pouliot  <spouliot@videotron.ca>

	* CryptoConfig.cs: Updated for RIPEMD160 and HMAC.
	* CspKeyContainerInfo.cs: New (1.2). Information about CSP based key
	containers.
	* DataProtectionScope.cs: New (1.2). Enumeration for ProtectedData.
	* HMAC.cs: New (1.2). Base class for all HMAC. Code is mostly copied 
	from internal Mono.Security.Cryptography.HMACAlgorith.cs.
	* HMACMD5.cs: New (1.2). HMAC implementation using MD5.
	* HMACRIPEMD160.cs: New (1.2). HMAC implementation using RIPEMD160.